--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,17 @@
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+body {
     text-align: center;
+}
+
+#gameArea {
+    background-color: darkgreen;
+    height: 60vh;
+    width: 80vh;
+}
+
+.levelButton {
+    display: inline-block;
+    margin: 18px;
+    padding: 12px;
+    border: 1px solid blue;
+    text-decoration: none;
 }
