add view object to script.js; add onload logic for gameplay.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,3 +16,15 @@ body {
     border: 1px solid blue;
     text-decoration: none;
 }
+
+.tile {
+    width: 100px;
+    height: 100px;
+    display: inline-block;
+    margin: 12px;
+    border: 1px solid black;
+}
+
+.faceDown {
+    background-color: aqua;
+}
