add flex display to gameArea

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,11 +2,21 @@ body {
     text-align: center;
 }
 
+#messageArea {
+    padding: 18px;
+    font-size: 36px;
+}
+
 #gameArea {
     background-color: darkgreen;
-    height: 60vh;
-    width: 80vh;
+    height: 80vh;
+    width: 50vw;
     margin: 0 auto;
+    padding: 18px;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
 }
 
 .levelButton {
@@ -18,8 +28,8 @@ body {
 }
 
 .tile {
-    width: 100px;
-    height: 100px;
+    height: 16vh;
+    width: 16vh;
     display: inline-block;
     margin: 12px;
     border: 1px solid black;
