--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@ body {
 }
 
 #messageArea {
+    margin: 12px;
     padding: 8px;
     font-size: 24px;
 }
@@ -61,6 +62,10 @@ body {
 }
 
 @media screen and (min-width: 1200px) {
+    #gameArea {
+        max-width: 80%;
+    }
+    
     .tile {
         height: 5.5vw;
         width: 5.5vw;
