--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,8 +2,18 @@ body {
     text-align: center;
 }
 
+.navbar {
+    min-height: 6vh;
+}
+
+.container, 
 .container-md {
     min-height: 90vh;
+}
+
+.hero {
+    min-height: 400px;
+    border: 1px solid black;
 }
 
 #messageArea {
@@ -18,6 +28,11 @@ body {
     padding: 12px;
     border: 1px solid blue;
     text-decoration: none;
+    transition: transform .5s;
+}
+
+.levelButton:hover {
+    transform: scale(1.2);
 }
 
 #gameArea {
@@ -127,7 +142,7 @@ body {
 
 .footerBar {
     background-color: lightgray;
-    height: 3vh;
+    height: 4vh;
     font-size: 2vh;
     text-align: center;
 }
