--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,11 +26,11 @@ body {
  *  Flip animation code obtained from W3Schools and adapted.
  **/
 .levelButton {
-    display: inline-block;
-    height: 200px;
-    width: 200px;
-    background-color: transparent;
-    margin: 16px;
+  display: inline-block;
+  height: 200px;
+  width: 200px;
+  background-color: transparent;
+  margin: 16px 32px;
 }
 
 .levelButtonContainer {
@@ -53,7 +53,7 @@ body {
   height: 100%;
   backface-visibility: hidden;
   border-radius: 5px;
-  box-shadow: 3px 3px 3px black;
+  box-shadow: 3px 3px 3px burlywood;
 }
 
 .levelButtonFront {
@@ -61,10 +61,21 @@ body {
 }
 
 .levelButtonBack {
-  border: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: lightblue;
+  border: 1px solid burlywood;
   transform: rotateY(180deg);
 }
 
+.levelButtonBack h4 {
+  margin-bottom: 16px;
+}
+
+.levelButtonBack:hover {
+  filter: brightness(80%);
+}
 
 #gameArea {
   background-color: darkgreen;
@@ -96,30 +107,20 @@ body {
 
 @media screen and (min-width: 768px) {
   .tile {
-    height: 10vw;
-    width: 10vw;
-  }
-}
-
-@media screen and (min-width: 992px) {
-  .tile {
-    margin: 12px;
+  height: 12vw;
+  width: 12vw;
   }
 }
 
 @media screen and (min-width: 1200px) {
   #gameArea {
-    max-width: 80%;
+  min-height: 60vh;
   }
-  
-  .tile {
-    height: 5.5vw;
-    width: 5.5vw;
-  }
-}
 
-@keyframes zoom {
-  from {height: 100}
+  .tile {
+  height: 6vw;
+  width: 6vw;
+  }
 }
 
 
