--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,6 +33,7 @@ h1, h2 {
 .gameWrapper {
   background: url("../img/gym.jpg") no-repeat center center fixed;
   background-size: contain;
+  position: relative;
 }
 
 .homeWrapper {
@@ -71,7 +72,44 @@ h1, h2 {
   align-items: flex-end;
 }
 
+.avatarImage {
+    position: absolute;
+    top: 25%;
+    height: 25vw;
+    width: 13vw;
+    background: url("../img/avatar.jpg") center center no-repeat;
+    background-size: contain;
+}
 
+
+/* Speech bubble code obtained from https://leaverou.github.io/bubbly/ and adapted */
+.bubbleWrapper {
+    position: absolute;
+    top: 20%;
+    left: 2.5%;
+}
+
+.textBubble {
+	position: relative;
+	background: #ffffff;
+	border-radius: .4em;
+    padding: 12px;
+}
+
+.textBubble:after {
+	content: '';
+	position: absolute;
+	bottom: 0;
+	left: 50%;
+	width: 0;
+	height: 0;
+	border: 20px solid transparent;
+	border-top-color: #ffffff;
+	border-bottom: 0;
+	border-left: 0;
+	margin-left: -10px;
+	margin-bottom: -20px;
+}
 
 /** 
  * Level selection buttons.
@@ -177,6 +215,10 @@ h1, h2 {
 }
 
 @media screen and (min-width: 1200px) {
+  #messageAreaTop {
+    display: none;
+  }
+
   #gameArea {
   flex-direction: column wrap;
   max-width: 65%;
@@ -386,7 +428,7 @@ h1, h2 {
 
 #restartButton {
   margin: 18px 0px;
-  font-size: 24px;
+  font-size: 18px;
 }
 
 .footerBar {
