--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,11 @@ h1 {
   text-shadow: 2px 2px 2px salmon;
 }
 
+small {
+  font-size: 20px;
+  font-weight: 300;
+}
+
 nav {
   background-color: purple;
   min-height: 5vh;
@@ -97,7 +102,7 @@ nav {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
-  align-items: flex-end;
+  align-items: center;
 }
 
 #messageAreaSide {
@@ -489,19 +494,30 @@ nav {
   border: none;
 }
 
-
-
 #restartButton {
   margin: 18px 0px;
   font-size: 18px;
   padding: 6px 8px 4px;
 }
 
+.modal-content {
+  background-color: blanchedalmond;
+  color: purple;
+}
+
+.modal-title {
+  font-size: 24px;
+}
 
 .modal-body li {
   text-align: left;
   margin-bottom: 6px;
   font-size: 20px;
+}
+
+.btn--modal {
+  background-color: purple;
+  color: white;
 }
 
 .footerBar {
