--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,6 +81,10 @@ nav {
   color: lightskyblue
 }
 
+.homeForm i:hover {
+  filter: brightness(110%);
+}
+
 .levelWrapper {
   display: flex;
   flex-flow: column wrap;
